package com.github.studeasy.dao.commandOfServiceDAO;

/**
 * Abstract class for the Command Of Service DAO
 * Contains the methods needed by the Command Of Service DAO
 */
public class CommandOfServiceDAO {
}
