package com.github.studeasy.dao.commandOfServiceDAO;

/**
 * The Command of Service DAO using a MySQL database
 * Contains all the methods accessing Command of Service related data
 */
public class MySQLCommandOfServiceDAO {
}
