package com.github.studeasy.logic.facades;

/**
 * The Facade User for the CommandOfServiceDAO
 * It contains methods that allow to create,update,delete a command
 */
public class FacadeCommandOfService {
}
