@startuml

@startuml
skinparam classAttributeIconSize 0

package GUI{
    abstract class AbstractRouter{
        + {static} load(String pathFXML) : Parent
        + changeView(String pathFXML, ActionEvent event)
        + adminRestricted(String pathFXML, ActionEvent event)
        + studentRestricted(String pathFXML, ActionEvent event)
    }

    class HomeStudentController{
            - bienvenueL : Label
            - myServiceB : Button
            - HistoricB: Button
            - seeAllServicesB : Button
            + myServices(ActionEvent event)
            + Historic(ActionEvent event)
            + seeAllServices(ActionEvent event)
            + logout(ActionEvent event)
            + initialize(URL location, RessourceBundle resources)
    }

    class myServicesController{
        - services : Service[]
        - servicesB : [Button]
        + viewService()
        + back(ActionEvent event)
    }

    class HistoricController{
            - purchasedServices : CommandOfService[]
            + getMyServicesBought(ActionEvent event)
            + addFeedback(ActionEvent event)
            + back(ActionEvent event)
     }

    class viewServiceController{
        - purchasedServices : CommandOfService[]
        - service : Service
        - validateService : Button
        - refuseService : Button
        - buyService : Button
        - applyForService : Button
        - viewFeedbacks : Button
        - isMyService() : Boolean
        + buyService(ActionEvent event)
        + applyForService(ActionEvent event)
        + acceptTransaction(ActionEvent event)
        + declineTransaction(ActionEvent event)
        + back(ActionEvent event)
    }



    class allServicesController{
            - services : Service[]
            - keyword : TextField
            - category : DropBox
            - askedServices : CheckBox
            - proposedServices : CheckBox

            + seeAllServices(ActionEvent event)
            + seeProposedServices(ActionEvent event)
            + seeAskedServices(ActionEvent event)
            + viewService(ActionEvent event)
            + searchService(ActionEvent event)
            + back(ActionEvent event)
            + initialize(URL location, RessourceBundle resources)
            + back(ActionEvent event)
        }


    class UserRouter{
        + {static} VIEW_SERVICE_FXML_PATH : String = "views/service/view_service.fxml"
        + {static} MY_SERVICES_FXML_PATH : String = "views/service/propose_ask_service.fxml"
        + {static} MY_HISTORICAL_FXML_PATH: String = "views/service/Historic_service.fxml"
        + {static} ALL_SERVICES_FXML_PATH : String = "views/service/all_services.fxml"
        + {static} getInstance() : UserRouter
    }

    AbstractRouter <|-right- UserRouter


    AbstractRouter <-- HomeStudentController
    AbstractRouter <-- allServicesController
    AbstractRouter <-- viewServiceController
    AbstractRouter <-- myServicesController
    AbstractRouter <-- HistoricController

    allServicesController <.. AbstractRouter : creates
    HomeStudentController <.. AbstractRouter : creates
    myServicesController <.. AbstractRouter : creates
    viewServiceController <.. AbstractRouter : creates
    HistoricController <.. AbstractRouter : creates


}


package BusinessLogic{
    class FacadeCommandOfService{
        + acceptTransaction(CommandOfService c)
        + declineTransaction(CommandOfService c)
        + buyService(Service s)
        + applyForService(Service s)
        + addFeedback(CommandOfService c)
        + {static} getInstance() : FacadeService
    }

    abstract class Factory{
        + CreateCommandOfServiceDAO() : CommandOfServiceDAO
       + {static} getInstance() : Factory
    }
    class MySQLFactory{
        - db : Connection
        + CreateCommandOfServiceDAO() : CommandOfServiceDAO
        - openConnection()
        - closeConnection()
    }

    Factory <|-left- MySQLFactory

    FacadeCommandOfService <-down- viewServiceController
    FacadeCommandOfService <-down- HistoricController

}

package DAO{

    abstract class CommandOfServiceDAO{

        + acceptTransaction(CommandOfService c)
        + declineTransaction(CommandOfService c)
        + buyService(Service s)
        + applyForService(Service s)
        + addFeedback(CommandOfService c)
        + {static} getInstance() : CommandOfServiceDAO
    }

    class MySQLCommandOfServiceDAO{
        - DB : Connection
        + acceptTransaction(CommandOfService c)
        + declineTransaction(CommandOfService c)
        + applyForService(Service s)
        + buyService(Service s)
        + addFeedback(CommandOfService c)

    }

    MySQLCommandOfServiceDAO --|> CommandOfServiceDAO
    MySQLCommandOfServiceDAO <.right. MySQLFactory : creates
    CommandOfServiceDAO ..> Factory : creates
    CommandOfServiceDAO <-right- FacadeCommandOfService


}



@enduml